--- a/index.html
+++ b/index.html
@@ -61,33 +61,44 @@ function updateTime() {
 }
 setInterval(updateTime, 1000);
 
-// --- AUTO LOGIN WITH CONFIRMATION ---
+// --- SAFE GUEST LOGIN ---
 async function guestLogin() {
+    const todayISO = new Date().toISOString().split('T')[0];
+
+    // Check if a guest last name is stored
     let lastName = localStorage.getItem('guest_last_name');
 
-    // Prompt guest if not stored
-    if(!lastName){
+    let guest;
+    if(lastName){
+        const { data } = await supabaseClient.from('families')
+            .select('*')
+            .eq('last_name', lastName)
+            .gte('check_out_date', todayISO)
+            .maybeSingle();
+        guest = data;
+    }
+
+    // If no stored guest or no match, ask for last name
+    if(!guest){
         lastName = prompt("Enter your last name:");
         if(!lastName) return guestLogin(); // require a name
         const confirmName = confirm(`Welcome ${lastName}s! Is this correct?`);
         if(!confirmName) return guestLogin();
+
+        const { data } = await supabaseClient.from('families')
+            .select('*')
+            .eq('last_name', lastName)
+            .gte('check_out_date', todayISO)
+            .maybeSingle();
+        if(!data){
+            document.getElementById('welcome-text').innerText = "No guests currently staying";
+            return;
+        }
+        guest = data;
         localStorage.setItem('guest_last_name', lastName);
     }
 
-    // Lookup in Supabase
-    const today = new Date().toISOString().split('T')[0];
-    const { data } = await supabaseClient.from('families')
-        .select('*')
-        .eq('last_name', lastName)
-        .gte('check_out_date', today)
-        .maybeSingle();
-
-    if(!data){
-        document.getElementById('welcome-text').innerText = "No guests currently staying";
-        return;
-    }
-
-    currentGuest = data;
+    currentGuest = guest;
 
     document.getElementById('guest-msg').disabled = false;
     document.getElementById('send-guest-msg').disabled = false;
@@ -97,10 +108,11 @@ async function guestLogin() {
 
 // --- RENDER GUEST INFO ---
 function renderGuestInfo(){
+    if(!currentGuest) return;
     document.getElementById('welcome-text').innerText = `Welcome ${currentGuest.last_name}s!`;
 
     const today = new Date();
-    today.setHours(0,0,0,0); // fix for timezone
+    today.setHours(0,0,0,0);
     const checkout = new Date(currentGuest.check_out_date);
     checkout.setHours(0,0,0,0);
 
@@ -134,7 +146,7 @@ async function loadMessages(){
     if(!msgs) return;
     msgs.forEach(m=>{
         let sender;
-        if(m.guest_id === currentGuest?.id) sender = "You";
+        if(m.guest_id === currentGuest.id) sender = "You";
         else sender = m.guest_id === null ? "Admin" : "Other Guest";
         const div = document.createElement('div');
         div.className = "p-2 bg-gray-100 rounded-xl";
